Bug 6533 - [3.1 regression] libstdc++ broken on unsigned char platforms
Summary: [3.1 regression] libstdc++ broken on unsigned char platforms
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: libstdc++ (show other bugs)
Version: 3.1
: P3 normal
Target Milestone: ---
Assignee: Benjamin Kosnik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-05-01 11:26 UTC by franz.sirl-kernel
Modified: 2003-07-25 17:33 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description franz.sirl-kernel 2002-05-01 11:26:00 UTC
Current CVS shows these regressions on powerpc-linux-gnu since sometime yesterday:

FAIL: 21_strings/inserters_extractors.cc execution test
FAIL: 26_numerics/complex_inserters_extractors.cc execution test
FAIL: 27_io/istream_extractor_arith.cc execution test
FAIL: 27_io/istream_sentry.cc execution test
FAIL: 27_io/istringstream_members.cc execution test
FAIL: 27_io/ostream_inserter_arith.cc execution test
FAIL: 27_io/stringstream_members.cc execution test

It is also reproducible on x86-linux-gnu if you bootstrap with:

	make bootstrap CFLAGS="-g -O2 -funsigned-char" CXXFLAGS="-g -O2 -funsigned-char" BOOT_CFLAGS="-g -O2 -funsigned-char"

On x86-linux-gnu one testcase only fails if you only run the libstdc++ testsuite with -funsigned-char

FAIL: 24_iterators/istreambuf_iterator.cc execution test

Release:
current 3.1 CVS

Environment:
glibc-2.2.5
binutils-2.12.90.0.7
Comment 1 Benjamin Kosnik 2002-05-01 15:55:51 UTC
Responsible-Changed-From-To: unassigned->bkoz
Responsible-Changed-Why: Mine.
Comment 2 Benjamin Kosnik 2002-05-01 15:55:51 UTC
State-Changed-From-To: open->feedback
State-Changed-Why: Fixed with
    
    2002-05-01  Benjamin Kosnik  <bkoz@redhat.com>
    
            PR libstdc++/6533
            * include/bits/streambuf_iterator.h (istreambuf_iterator::_M_get): New.
            (istreambuf_iterator::equal): Use it.
            (istreambuf_iterator::operator*): Use it.
Comment 3 Franz Sirl 2002-05-02 06:26:10 UTC
State-Changed-From-To: feedback->closed
State-Changed-Why: Confirmed fixed on powerpc-linux-gnu and x86-linux-gnu, thanks.